--- a/tmux.1
+++ b/tmux.1
@@ -35,6 +35,66 @@ is a terminal multiplexer:
 it enables a number of terminals to be created, accessed, and
 controlled from a single screen.
 .Pp
+When
+.Nm
+is started it creates a new
+.Em session
+with a single
+.Em window
+and displays it on screen.
+A status line at the bottom of the screen
+shows information on the current session
+and is used to enter interactive commands.
+.Pp
+A session is a single collection of
+.Em pseudo terminals
+under the management of
+.Nm .
+Each session has one or more
+windows linked to it.
+A window occupies the entire screen
+and may be split into rectangular panes,
+each of which is a separate pseudo terminal
+(the
+.Xr pty 4
+manual page documents the technical details of pseudo terminals).
+Any number of
+.Nm
+instances may connect to the same session,
+and any number of windows may be present in the same session.
+Once all sessions are killed,
+.Nm
+exits.
+.Pp
+For a quick start guide,
+see the
+.Sx EXAMPLES
+section at the bottom of the page.
+An overview of the sections in this manual page:
+.Bl -ohang
+.It Sy Commands
+An overview of how
+.Nm
+commands work.
+.It Sy Clients and sessions
+Commands for managing clients and sessions.
+.It Sy Windows and panes
+Commands for managing windows and panes.
+.It Sy Key bindings
+How key bindings work.
+.It Sy Options
+Configuration options for
+.Nm .
+.It Sy Status line
+Commands pertinent to the status line.
+.It Sy Buffers
+Copy and paste operations.
+.It Sy Miscellaneous
+Miscellaneous commands.
+.It Sy Examples
+A quick start guide.
+.El
+.Pp
 The options are as follows:
 .Bl -tag -width "XXXXXXXXXXXX"
 .It Fl 2
@@ -131,62 +191,6 @@ as described in the following sections.
 If no commands are specified, the
 .Ic new-session
 command is assumed.
-.El
-.Sh INTRODUCTION
-When
-.Nm
-is started it creates a new
-.Em session
-with a single
-.Em window
-and displays it on screen.
-A status line at the bottom of the screen
-shows information on the current session
-and is used to enter interactive commands.
-.Pp
-A session is a single collection of
-.Em pseudo terminals
-under the management of
-.Nm .
-Each session has one or more
-windows linked to it.
-A window occupies the entire screen
-and may be split into rectangular panes,
-each of which is a separate pseudo terminal
-(the
-.Xr pty 4
-manual page documents the technical details of pseudo terminals).
-Any number of
-.Nm
-instances may connect to the same session,
-and any number of windows may be present in the same session.
-Once all sessions are killed,
-.Nm
-exits.
-.Pp
-This is an overview of the sections in this manual page:
-.Bl -ohang
-.It Sy Commands
-An overview of how
-.Nm
-commands work.
-.It Sy Clients and sessions
-Commands for managing clients and sessions.
-.It Sy Windows and panes
-Commands for managing windows and panes.
-.It Sy Key bindings
-How key bindings work.
-.It Sy Options
-Configuration options for
-.Nm .
-.It Sy Status line
-Commands pertinent to the status line.
-.It Sy Buffers
-Copy and paste operations.
-.It Sy Miscellaneous
-Miscellaneous commands.
-.It Sy Examples
-A quick start guide.
 .El
 .Sh COMMANDS
 This section contains a list of the commands supported by
