Options to set the colours and attributes for status-left/-right. From Thomas Adam, thanks.

--- a/tmux.1
+++ b/tmux.1
@@ -1238,6 +1238,12 @@ By default, UTF-8 in
 is not interpreted, to enable UTF-8, use the
 .Ic status-utf8
 option.
+.It Ic status-left-attr Ar attributes
+Set the attribute of the left part of the status line. 
+.It Ic status-left-fg Ar colour
+Set the foreground colour of the left part of the status line.
+.It Ic status-left-bg Ar colour
+Set the background colour of the left part of the status line.
 .It Ic status-left-length Ar length
 Set the maximum
 .Ar length
@@ -1256,6 +1262,12 @@ will be passed to
 character pairs are replaced, and UTF-8 is dependent on the
 .Ic status-utf8
 option.
+.It Ic status-right-attr Ar attributes
+Set the attribute of the right part of the status line. 
+.It Ic status-right-fg Ar colour
+Set the foreground colour of the right part of the status line.
+.It Ic status-right-bg Ar colour
+Set the background colour of the right part of the status line.
 .It Ic status-right-length Ar length
 Set the maximum
 .Ar length
