--- a/TODO
+++ b/TODO
@@ -101,3 +101,7 @@
   to be smaller by other clients. pan smaller terminal? (like screen F)
 		-- idea of a "view" onto a window, need base x/y offsets
 		   for redraw
+- stuff should be pane targets rather than window targets:
+       	 - send-keys/send-prefix
+	 - all the mode stuff
+
