Add a base-index session option to specify the first index checked when looking for an index for a new window.

--- a/tmux.1
+++ b/tmux.1
@@ -1064,6 +1064,10 @@ options - it is not possible to unset a global option.
 .Pp
 Available session options are:
 .Bl -tag -width Ds
+.It Ic base-index Ar index
+Set the base index from which an unused index should be searched when a new
+window is created.
+The default is zero.
 .It Xo Ic bell-action
 .Op Ic any | none | current
 .Xc
