--- a/tmux.1
+++ b/tmux.1
@@ -482,6 +482,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Cursor left" Ta "h" Ta "Left"
 .It Li "Cursor right" Ta "l" Ta "Right"
 .It Li "Cursor up" Ta "k" Ta "Up"
+.It Li "Delete entire line" Ta "d" Ta "C-u"
 .It Li "Delete to end of line" Ta "D" Ta "C-k"
 .It Li "End of line" Ta "$" Ta "C-e"
 .It Li "Goto line" Ta "g" Ta "g"
