Add some other obvious variables to update-environment (WINDOWID SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION) so they are updated in the session environment on new/attach.

--- a/tmux.1
+++ b/tmux.1
@@ -1343,7 +1343,7 @@ was given to the
 .Ic set-environment
 command).
 The default is
-.Ev DISPLAY .
+"DISPLAY WINDOWID SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION".
 .It Xo Ic visual-activity
 .Op Ic on | off
 .Xc
