squash typo ok nicm@

--- a/tmux.1
+++ b/tmux.1
@@ -1227,7 +1227,7 @@ window option for any windows first created in this session.
 .It Xo Ic set-titles
 .Op Ic on | off
 .Xc
-Attempt to set the window title using the \ee]2;...\e007 xterm code and
+Attempt to set the window title using the \ee]2;...\e007 xterm code if
 the terminal appears to be an xterm.
 This option is off by default.
 Note that elinks
