--- a/tmux.1
+++ b/tmux.1
@@ -1143,13 +1143,31 @@ maintain this maximum length.
 .It Ic default-command Ar command
 Set the command used for new windows (if not specified when the window is
 created) to
-.Ar command .
+.Ar command ,
+which may be any
+.Xr sh 1
+command.
 The default is an empty string, which instructs
 .Nm
-to create a login shell using the
+to create a login shell using the value of the
+.Ic default-shell
+option.
+.It Ic default-shell Ar path
+Specify the default shell.
+This is used as the login shell for new windows when the
+.Ic default-command
+option is set to empty, and must be the full path of the executable.
+When started
+.Nm
+tries to set a default value from the first suitable of the
 .Ev SHELL
-environment variable or, if it is unset, the user's shell returned by
-.Xr getpwuid 3 .
+environment variable, the shell returned by
+.Xr getpwuid 3 ,
+or
+.Pa /bin/sh .
+This option should be configured when
+.Nm
+is used as a login shell.
 .It Ic default-path Ar path
 Set the default working directory for processes created from keys, or
 interactively from the prompt.
