Add a transpose-chars command in edit mode (C-t in emacs mode only). From Kalle Olavi Niemitalo.

--- a/tmux.1
+++ b/tmux.1
@@ -497,6 +497,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Search forward" Ta "/" Ta "C-s"
 .It Li "Start of line" Ta "0" Ta "C-a"
 .It Li "Start selection" Ta "Space" Ta "C-Space"
+.It Li "Transpose chars" Ta "" Ta "C-t"
 .El
 .Pp
 These key bindings are defined in a set of named tables:
